--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,14 +242,15 @@ ul li{
 }
 
 .content-bottom_list-item-content{
-    height: 12rem;
+    min-height: 15rem;
     gap: 2rem;
 }
 
 .cont-bottom_list-item-img{
     flex: 1 1 30rem;
+    height: 14rem;
     background-position: center ;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -423,10 +424,6 @@ ul li{
     .content-bottom_list{
         min-height: 15rem;
         flex-direction: row;
-    }
-
-    .content-bottom_list-item-content{
-        min-height: 15rem;
     }
 
 }
